k8s/media/qbittorent/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: qbittorrent
  template:
    metadata:
      labels:
        component: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:amd64-4.4.3.1-r1-ls210
          imagePullPolicy: Always
          ports:
            - name: qbittorrent
              containerPort: 8080
              protocol: TCP
            - name: torrent-tcp
              containerPort: 6881
              protocol: TCP
            - name: torrent-udp
              containerPort: 6881
              protocol: UDP
          # readinessProbe:
          #   tcpSocket:
          #     port: 8080
          #   initialDelaySeconds: 5
          #   periodSeconds: 10
          volumeMounts:
            - name: media-data
              mountPath: /config
              subPath: config/qbittorrent
            - name: media-data
              mountPath: /downloads
              subPath: downloads
      volumes:
        - name: media-data
          persistentVolumeClaim:
            claimName: media-data
        - name: init-files-qbittorrent
          configMap:
            defaultMode: 493
            name: init-qbittorrent-cm
