k8s/media/qbittorent/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  type: ClusterIP
  selector:
    component: qbittorrent
  ports:
    - name: qbittorrent
      port: 8080
      targetPort: qbittorrent
---
apiVersion: v1
kind: Service
metadata:
  name: torrent-tcp
spec:
  type: ClusterIP
  selector:
    component: qbittorrent
  ports:
    - name: torrent-tcp
      port: 6881
      protocol: TCP
      targetPort: torrent-tcp
---
apiVersion: v1
kind: Service
metadata:
  name: torrent-udp
spec:
  type: ClusterIP
  selector:
    component: qbittorrent
  ports:
    - name: torrent-udp
      port: 6881
      protocol: UDP
      targetPort: torrent-udp
