k8s/media/qbittorent/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: media-ingress-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  rules:
  - host: qbittorrent.media.k8s.prrlvr.fr
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: qbittorrent
              port:
                name: qbittorrent
  tls:
    - hosts:
        - qbittorrent.media.k8s.prrlvr.fr
      secretName: qbittorrent-media-tls
